# plant_gen

./: .gitignore  Cargo.toml  Readme.md  index.html
export/res/: j.json
res/shaders/: circle_shader.wgsl
src/: application.rs  camera_controller.rs  l_system.rs  lib.rs  main.rs  shape_renderer.rs
