[package]
name = "l_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.80"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.21"
pollster = "0.3.0"
rand = "0.8.5"
serde = {verison = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = [
    "Window",
    "Element",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Document",
]}
web-time = "1.1.0"

[dependencies.jandering_engine]
path = "../jandering_engine"
